--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html,
+body {
+  width: 100%;
+}
+.slider {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  flex-direction: column;
+}
+.slide_main_image {
+  width: 695px;
+  height: 60vh;
+}
+img {
+  width: 100%;
+  height: 100%;
+}
+.slide_images {
+  width: 695px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+}
+.slide_single_image {
+  width: 25%;
+  height: auto;
+}
+.slide_single_image img {
+  border: 2px solid rgb(223, 220, 220);
+  cursor: pointer;
+}
+.section_2 {
+  width: 695px;
+  margin-top: 20px;
+}
+.section_2 .text {
+  line-height: 35px;
+}
+/* .radio_btns div label {
+  cursor: pointer !impo;
+} */
+.form-check-input {
+  box-shadow: none !important;
+  cursor: pointer;
+}
+.form-check-input:checked[type="radio"] {
+  background-image: unset !important;
+  box-shadow: none !important;
+}
+.form-check-input:checked {
+  background-color: #dc3545 !important;
+  border-color: #dc3545 !important;
+  box-shadow: none !important;
+}
+.box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.box div {
+  width: 100px;
+  height: 80px;
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  font-size: 12px;
+  box-shadow: -4px -2px 2px 1px rgb(68, 68, 68);
+  color: #fff;
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+.offer {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.offer h1 {
+  font-size: 20px;
+  margin: 0;
+}
+.offer p {
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.section_2 button {
+  width: 150px;
+  height: 35px;
+  background-color: #dc3545;
+  outline: none;
+  border: none;
+  margin-top: 10px;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px;
+  letter-spacing: 2px;
+  font-family: sans-serif;
+}
+
+/* ================== responsive ================= */
+
+@media only screen and (max-width: 991px) {
+  .slide_main_image,
+  .section_2,
+  .slide_images,
+  .slider {
+    width: 100%;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 768px) {
+  .slider {
+    padding: 5px;
   }
-  to {
-    transform: rotate(360deg);
+  .section_2 {
+    margin-top: 0px;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .sizes label {
+    font-size: 13px;
   }
 }
